image format, responsive improvement

--- a/iproc-2go/index.html
+++ b/iproc-2go/index.html
@@ -29,9 +29,9 @@
     <title>iProc 2Go</title>
     <link rel="shortcut icon" href="../lib/img/iproc-2-go/iproc-2-go.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
-    <link rel="stylesheet" href="../lib/css/output.css" />
     <link rel="stylesheet" href="../lib/css/flowbite.min.css" />
-    <link rel="stylesheet" href="../lib/css/style.css">
+    <link rel="stylesheet" href="../lib/css/output.css" />
+    <link rel="stylesheet" href="../lib/css/style.min.css">
     <link rel="stylesheet" href="../lib/css/iproc-2-go.css" defermedia="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -169,19 +169,19 @@
 
     <main>
         <section id="home" class="hero pt-22 md:pt-40 overflow-hidden">
-            <div class="max-w-screen-2xl mx-auto px-8 md:px-0 grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
+            <div class="max-w-screen-2xl mx-auto px-4 sm:px-14! grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
                 <div class="col-span-6">
-                    <img loading="lazy" class="mb-4 mx-auto sm:mx-0 w-1/5" src="../lib/img/iproc-2-go/iproc-2-go.svg"
+                    <img loading="lazy" class="mb-4 mx-auto sm:mx-0" src="../lib/img/iproc-2-go/iproc-2-go.svg"
                         alt="iProc 2 Go Logo" />
                     <h1
-                        class="mb-5 text-2xl text-center sm:text-left! sm:text-6xl! font-extrabold text-gray-900 leading-snug">
+                        class="mb-5 text-2xl text-center sm:text-left! md:text-4xl! lg:text-6xl! font-extrabold text-gray-900 leading-snug">
                         Transformasi Pengadaan di Ujung Jari Anda!
                     </h1>
-                    <p class="text-gray-500 mb-5 text-center sm:text-left! text-sm sm:text-xl leading-normal">
+                    <p class="text-gray-500 mb-5 text-center sm:text-left! text-sm md:text-base lg:text-xl leading-normal">
                         Kapan saja dan di mana saja, akses beberapa fitur iProc kini semakin mudah dengan iProc 2 Go,
                         aplikasi iProc di mobile phone Anda.
                     </p>
-                    <div class="flex gap-4 flex-col sm:flex-row">
+                    <div class="flex gap-4 flex-col lg:flex-row">
                         <a href="https://apps.apple.com/id/app/iproc2go-intranet/id6480402089"
                             class="w-full sm:w-auto bg-gray-900 hover:bg-gray-700 focus:ring-4 focus:outline-none focus:ring-gray-300 text-white rounded-lg inline-flex items-center justify-center px-8 py-2.5">
                             <svg class="me-3 w-7 h-7" aria-hidden="true" focusable="false" data-prefix="fab"
@@ -212,10 +212,10 @@
                     </div>
                 </div>
                 <div class="col-span-6 cloud-content flex justify-center">
-                    <div class="inline-block relative illustration -bottom-20" data-aos="zoom-in-left"
+                    <div class="block relative illustration -bottom-20" data-aos="zoom-in-left"
                         data-aos-duration="800">
-                        <img loading="lazy" src="../lib/img/iproc-2-go/Image & Reviews.png" alt="2go Illustration"
-                            class="w-full relative z-20" />
+                        <img loading="lazy" src="../lib/img/iproc-2-go/Image & Reviews.webp" alt="2go Illustration"
+                            class="w-6/12 sm:w-9/12! relative z-20 mx-auto" />
                     </div>
                 </div>
             </div>
@@ -223,17 +223,17 @@
 
             </div>
         </section>
-        <section id="problem" class="problem py-20">
-            <div class="max-w-screen-2xl mx-auto px-8 sm:px-0 text-center">
+        <section id="problem" class="problem py-12 sm:py-20!">
+            <div class="max-w-screen-2xl mx-auto px-4 sm:px-14! text-center">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 w-3/5 mx-auto">
                     Sebagai pelaku pengadaan, pernahkah Anda merasakan hal-hal berikut ini:
                 </h2>
                 <div class="grid grid-cols-12 gap-8">
-                    <div class="col-span-12 sm:col-span-6! md:col-span-4! flex flex-col items-center"
+                    <div class="col-span-12 md:col-span-6! lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800">
                         <div
-                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#48ACE1] w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/problem-1.png" class="mx-auto"
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#48ACE1] w-3/4 md:w-full pt-4 md:pt-10">
+                            <img loading="lazy" src="../lib/img/iproc-2-go/problem-1.webp" class="mx-auto"
                                 alt="Problem 1" />
                         </div>
                         <div class="flex gap-4 items-start p-5">
@@ -245,16 +245,16 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">
                                 Butuh untuk segera memproses Request for Quotation (RFQ)?
                             </p>
                         </div>
                     </div>
-                    <div class="col-span-12 sm:col-span-6! md:col-span-4! flex flex-col items-center"
+                    <div class="col-span-12 md:col-span-6! lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="50">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#F05252] w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/problem-2.png" class="mx-auto"
+                            <img loading="lazy" src="../lib/img/iproc-2-go/problem-2.webp" class="mx-auto"
                                 alt="Problem 2" />
                         </div>
                         <div class="flex gap-4 items-start p-5">
@@ -266,16 +266,16 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">
                                 Proses approval tertunda karena hanya bisa mengakses e-Procurement lewat laptop?
                             </p>
                         </div>
                     </div>
-                    <div class="col-span-12 sm:col-span-6! md:col-span-4! flex flex-col items-center"
+                    <div class="col-start-1 md:col-start-4! lg:col-start-9! col-span-12 md:col-span-6! lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="100">
                         <div
-                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#FFBC50] w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/problem-3.png" class="mx-auto"
+                            class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#FFBC50] w-3/4 md:w-full pt-4 md:pt-10">
+                            <img loading="lazy" src="../lib/img/iproc-2-go/problem-3.webp" class="mx-auto"
                                 alt="Problem 3" />
                         </div>
                         <div class="flex gap-4 items-start p-5">
@@ -287,7 +287,7 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">
                                 Kurang fleksibel dalam menangani proses pengadaan saat berada di luar kantor?
                             </p>
                         </div>
@@ -295,8 +295,8 @@
                 </div>
             </div>
         </section>
-        <section id="solution" class="solve py-20">
-            <div class="max-w-screen-2xl mx-auto px-8 sm:px-0">
+        <section id="solution" class="solve py-12 sm:py-20!">
+            <div class="max-w-screen-2xl mx-auto px-4 sm:px-14!">
                 <img loading="lazy" src="../lib/img/iproc-2-go/iproc-2-go.svg" class="mx-auto w-30 mb-2"
                     alt="iProc 2GO Logo">
                 <h2 class="text-2xl sm:text-4xl! text-center font-bold text-gray-900 mb-2">
@@ -306,11 +306,11 @@
                     hal-hal berikut
                     tanpa harus membuka laptop:</p>
                 <div class="grid grid-cols-12 gap-8">
-                    <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
+                    <div class="col-span-12 md:col-span-6 lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-green-400 w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-5.png" class="mx-auto" alt="Problem 3" />
+                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-1.webp" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -322,15 +322,15 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">Melakukan seluruh proses
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">Melakukan seluruh proses
                                 Purchase-to-Pay melalui e-Catalogue</p>
                         </div>
                     </div>
-                    <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
+                    <div class="col-span-12 md:col-span-6 lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="50">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-pink-400 w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-1.png" class="mx-auto" alt="Problem 3" />
+                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-2.webp" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -342,16 +342,16 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">Melakukan Approval untuk
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">Melakukan Approval untuk
                                 Purchase
                                 Requisition (PR)</p>
                         </div>
                     </div>
-                    <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
+                    <div class="col-span-12 md:col-span-6 lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="100">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-purple-400 w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-2.png" class="mx-auto" alt="Problem 3" />
+                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-3.webp" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -363,16 +363,16 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">Melakukan Approval untuk
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">Melakukan Approval untuk
                                 Commodity
                             </p>
                         </div>
                     </div>
-                    <div class="col-span-12 sm:col-span-6 col-start-1 md:col-start-3! md:col-span-4! flex flex-col items-center"
+                    <div class="col-span-12 md:col-span-6 lg:col-span-4! col-start-1 lg:col-start-3! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="150">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-teal-400 w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-3.png" class="mx-auto" alt="Problem 3" />
+                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-4.webp" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -384,15 +384,15 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">Melakukan Approval Vendor
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">Melakukan Approval Vendor
                             </p>
                         </div>
                     </div>
-                    <div class="col-span-12 sm:col-span-6 md:col-span-4! flex flex-col items-center"
+                    <div class="col-start-1 md:col-start-4! col-span-12 md:col-span-6 lg:col-span-4! flex flex-col items-center"
                         data-aos="fade-down" data-aos-duration="800" data-aos-delay="200">
                         <div
                             class="rounded-xl aspect-[7/6] flex align-bottom overflow-hidden mb-2 bg-[#A2845E] w-3/4 md:w-full">
-                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-4.png" class="mx-auto" alt="Problem 3" />
+                            <img loading="lazy" src="../lib/img/iproc-2-go/solve-5.webp" class="mx-auto" alt="Problem 3" />
                         </div>
                         <div class="flex items-start gap-4 p-5">
                             <span class="bg-green-100 p-2 rounded-md">
@@ -404,7 +404,7 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </span>
-                            <p class="text-gray-700 text-left text-sm sm:text-xl font-bold">Memproses Request for
+                            <p class="text-gray-700 text-left text-base md:text-lg lg:text-xl font-bold">Memproses Request for
                                 Quotation
                                 (RFQ)</p>
                         </div>
@@ -412,7 +412,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="bottom md:pt-25 relative mb-20 px-8">
+        <section id="contact" class="bottom md:pt-25 relative mb-20 px-4 sm:px-14!">
             <div class="max-w-screen-2xl mx-auto text-left p-10 sm:p-15 rounded-4xl relative md:pr-[30%]">
                 <p class="text-xl md:text-2xl! lg:text-5xl! font-bold text-white leading-tight mb-5">
                     Proses lebih cepat, efisien, dan fleksibel di mana saja dan kapan saja!
@@ -436,7 +436,7 @@
                     *hanya fitur-fitur tertentu dari iProc yang dapat
                     dikelola melalui iProc 2 Go
                 </p>
-                <img loading="lazy" src="../lib/img/iproc-2-go/phone.png"
+                <img loading="lazy" src="../lib/img/iproc-2-go/phone.webp"
                     class="relative -bottom-15 mx-auto right-0 w-1/2 hidden sm:block md:absolute! md:bottom-0 md:right-8! md:w-1/4!"
                     alt="iProc Phone" data-aos="fade-up" data-aos-duration="800">
             </div>
