--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -31,9 +31,9 @@
     <link rel="shortcut icon" href="../lib/img/Iproc cloud.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <link rel="stylesheet" href="../lib/css/flowbite.min.css" />
-    <link rel="stylesheet" href="../lib/css/output.css" />
-    <link rel="stylesheet" href="../lib/css/style.css">
-    <link rel="stylesheet" href="../lib/css/iproc-cloud.css" defermedia="screen" />
+    <link rel="stylesheet" href="../lib/css/output.min.css" />
+    <link rel="stylesheet" href="../lib/css/style.min.css">
+    <link rel="stylesheet" href="../lib/css/iproc-cloud.min.css" defermedia="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
