--- a/iproc-2go/index.html
+++ b/iproc-2go/index.html
@@ -30,7 +30,7 @@
     <link rel="shortcut icon" href="../lib/img/iproc-2-go/iproc-2-go.svg" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" />
     <link rel="stylesheet" href="../lib/css/flowbite.min.css" />
-    <link rel="stylesheet" href="../lib/css/output.css" />
+    <link rel="stylesheet" href="../lib/css/output.min.css" />
     <link rel="stylesheet" href="../lib/css/style.min.css">
     <link rel="stylesheet" href="../lib/css/iproc-2-go.css" defermedia="screen" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
@@ -169,7 +169,7 @@
 
     <main>
         <section id="home" class="hero pt-22 md:pt-40 overflow-hidden">
-            <div class="max-w-screen-2xl mx-auto px-4 sm:px-14! grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
+            <div class="max-w-screen-2xl mx-auto px-8 sm:px-14! grid grid-cols-1 sm:grid-cols-12! gap-4 items-center">
                 <div class="col-span-6">
                     <img loading="lazy" class="mb-4 mx-auto sm:mx-0" src="../lib/img/iproc-2-go/iproc-2-go.svg"
                         alt="iProc 2 Go Logo" />
@@ -224,7 +224,7 @@
             </div>
         </section>
         <section id="problem" class="problem py-12 sm:py-20!">
-            <div class="max-w-screen-2xl mx-auto px-4 sm:px-14! text-center">
+            <div class="max-w-screen-2xl mx-auto px-8 sm:px-14! text-center">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 w-3/5 mx-auto">
                     Sebagai pelaku pengadaan, pernahkah Anda merasakan hal-hal berikut ini:
                 </h2>
@@ -296,7 +296,7 @@
             </div>
         </section>
         <section id="solution" class="solve py-12 sm:py-20!">
-            <div class="max-w-screen-2xl mx-auto px-4 sm:px-14!">
+            <div class="max-w-screen-2xl mx-auto px-8 sm:px-14!">
                 <img loading="lazy" src="../lib/img/iproc-2-go/iproc-2-go.svg" class="mx-auto w-30 mb-2"
                     alt="iProc 2GO Logo">
                 <h2 class="text-2xl sm:text-4xl! text-center font-bold text-gray-900 mb-2">
@@ -412,7 +412,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="bottom md:pt-25 relative mb-20 px-4 sm:px-14!">
+        <section id="contact" class="bottom md:pt-25 relative mb-20 px-8 sm:px-14!">
             <div class="max-w-screen-2xl mx-auto text-left p-10 sm:p-15 rounded-4xl relative md:pr-[30%]">
                 <p class="text-xl md:text-2xl! lg:text-5xl! font-bold text-white leading-tight mb-5">
                     Proses lebih cepat, efisien, dan fleksibel di mana saja dan kapan saja!
