--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -171,7 +171,7 @@
     </nav>
     <main>
         <section id="home" class="hero sm:pt-22 h-dvh">
-            <div class="max-w-screen-2xl h-full flex flex-col justify-center sm:justify-around mx-auto px-4 md:px-14!">
+            <div class="max-w-screen-2xl h-full flex flex-col justify-center sm:justify-around mx-auto px-8 md:px-14!">
                 <div class="relative sm:-bottom-15">
                     <img class="mb-8 mx-auto w-56 sm:w-92!" src="../lib/img/Iproc cloud.svg" alt="iProc Cloud Logo" />
                     <h1 class="mb-3 text-4xl text-center sm:text-6xl! font-extrabold text-gray-900">
@@ -193,14 +193,14 @@
         </section>
         <div class="py-12 sm:py-20 -mt-24 sm:-mt-40 bg-[#24A3F2]"></div>
         <section id="problem" class="solve py-12 sm:py-24">
-            <div class="max-w-screen-2xl mx-auto px-4 md:px-14! text-center">
+            <div class="max-w-screen-2xl mx-auto px-8 md:px-14! text-center">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-8">
                     Organisasi Anda sudah mengimplementasikan <br />
                     e-Procurement, namun...
                     <!-- Your organization has already adopted <br> e-Procurement, but... -->
                 </h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-y-8 lg:gap-y-0 -mr-4 -ml-4 md:-mr-12 md:-ml-12">
-                    <div class="flex flex-col items-center px-4 md:px-12 border-r-2 border-sky-200" data-aos="fade-up"
+                    <div class="flex flex-col items-center px-4 md:px-12 border-r-0 border-sky-200 lg:border-r-2" data-aos="fade-up"
                         data-aos-duration="800">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-1.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Biaya Besar" />
@@ -219,7 +219,7 @@
                             <!-- Is the system implementation complicated and time-consuming? -->
                         </p>
                     </div>
-                    <div class="flex flex-col items-center px-4 md:px-12 border-r-2 border-sky-200" data-aos="fade-up"
+                    <div class="flex flex-col items-center px-4 md:px-12 border-r-0 border-sky-200 lg:border-r-2" data-aos="fade-up"
                         data-aos-duration="800" data-aos-delay="200">
                         <img loading="lazy" src="../lib/img/iproc cloud/problem-3.svg" class="mb-4 w-8/12 sm:w-12/12"
                             alt="Akses Terbatas" />
@@ -244,7 +244,7 @@
         </section>
         <section id="solution" class="desk pt-12 md:py-5 relative overflow-hidden">
             <div
-                class="max-w-screen-2xl mx-auto flex flex-col items-center md:flex-row px-4 md:px-14! gap-10 md:gap-14!">
+                class="max-w-screen-2xl mx-auto flex flex-col items-center md:flex-row px-8 md:px-14! gap-10 md:gap-14!">
                 <div class="content-desk md:py-20 ">
                     <h2 class="text-2xl sm:text-4xl! font-bold text-white">
                         Beralih ke iProc Cloud Solusinya!
@@ -284,13 +284,13 @@
             </div>
         </section>
         <section class="why-iproc py-12 sm:py-20">
-            <div class="max-w-screen-2xl mx-auto px-4 md:px-14!">
+            <div class="max-w-screen-2xl mx-auto px-8 md:px-14!">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-center text-gray-900 mb-14">
                     Mengapa iProc
                     Cloud?
                     <!-- Why iProc Cloud? -->
                 </h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-10! w-full">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8 md:gap-10! w-full">
                     <div class="flex flex-col items-start bg-white shadow rounded-xl p-4 md:p-6" data-aos="fade-up"
                         data-aos-duration="800">
                         <img loading="lazy" src="../lib/img/iproc cloud/solusi-1.svg"
@@ -402,12 +402,12 @@
             </div>
         </section>
         <section id="features" class="feature py-12 sm:py-24">
-            <div class="max-w-screen-2xl mx-auto px-4 md:px-14! relative">
+            <div class="max-w-screen-2xl mx-auto px-8 md:px-14! relative">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-14 text-center">
                     Fitur Lengkap untuk Mendukung Pengadaan Modern
                 </h2>
-                <div class="flex flex-col gap-4 md:gap-0 md:flex-row">
-                    <div class="flex flex-col sm:flex-row md:flex-col! w-full gap-4 md:gap-10 order-2 md:order-1">
+                <div class="flex flex-col gap-8 md:gap-0 md:flex-row">
+                    <div class="flex flex-col sm:flex-row md:flex-col! w-full gap-8 md:gap-10 order-2 md:order-1">
                         <div class="w-full">
                             <div class="bg-[#48ACE1] rounded-xl p-4 overflow-hidden">
                                 <img loading="lazy" src="../lib/img/iproc cloud/fitur-1x2.webp" data-aos="zoom-in-up"
@@ -486,7 +486,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex flex-col sm:flex-row md:flex-col! w-full gap-4 md:gap-10 order-3">
+                    <div class="flex flex-col sm:flex-row md:flex-col! w-full gap-8 md:gap-10 order-3">
                         <div class="w-full">
                             <div class="bg-[#FFBC50] rounded-xl p-4 overflow-hidden">
                                 <img loading="lazy" src="../lib/img/iproc cloud/fitur-3x2.webp" data-aos="zoom-in-up"
@@ -522,7 +522,7 @@
             </div>
         </section>
         <section id="perbandingan" class="hidden-iproc py-12 sm:py-24">
-            <div class="max-w-screen-2xl mx-auto px-4 md:px-14!">
+            <div class="max-w-screen-2xl mx-auto px-8 md:px-14!">
                 <img loading="lazy" src="../lib/img/Iproc cloud.svg" class="w-48 sm:w-72 mb-12 mx-auto"
                     alt="Logo iproc cloud">
                 <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 text-center">
@@ -530,7 +530,7 @@
                 </h2>
 
                 <div class="w-full">
-                    <div class="grid grid-cols-12 gap-6">
+                    <div class="grid grid-cols-12 gap-8">
                         <div
                             class="bg-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
