pricing, hero min height,

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
     </nav>
 
     <main>
-        <section class="hero pt-22 h-dvh" id="home">
-            <div class="max-w-screen-2xl relative h-full flex flex-col justify-end mx-auto px-8 sm:px-14">
+        <section class="hero pt-22 min-h-dvh flex flex-col" id="home">
+            <div class="max-w-screen-2xl relative flex-grow flex flex-col  justify-end gap-8 mx-auto px-8 sm:px-14">
                 <div class="relative flex-grow flex flex-col items-center justify-center">
                     <h1 class="mb-3 text-5xl sm:text-6xl! text-center font-extrabold text-gray-900">
                         Integrated Procurement Platform
@@ -219,7 +219,7 @@
                         stage of your procurement process.
                 </div>
                 <div
-                    class="iframe-wrapper relative overflow-hidden w-full md:w-10/12! lg:w-[60%]! mx-auto px-3 pt-3 md:px-6! md:pt-6! bg-linear-[180deg,#02498D,#015DB54D] rounded-t-4xl mb-40 lg:mb-0">
+                    class="iframe-wrapper relative overflow-hidden w-full md:w-10/12! lg:w-[80%]! mx-auto px-3 pt-3 md:px-6! md:pt-6! bg-linear-[180deg,#02498D,#015DB54D] rounded-t-4xl mb-40 lg:mb-0">
                     <!-- <iframe class="w-full rounded-t-3xl md:rounded-t-2xl"
                         src="https://www.youtube.com/embed/ugrnTcuBVZg?si=iYoGTDEeYlXL3tb3" title="YouTube video player"
                         frameborder="0"
